fix(Grid): Adjust available width for columns
With the newer native scrollbar changes we need to subtract the scrollbar
width from the available width used to render the columns, otherwise the
viewport contents will overflow the visible area and cause the viewport to
scroll horizontally when we don't want it to.

Thanks to @dczepierga for tracking down the cause and solution.

Fixes #2521, #2734, #2592

--- a/src/features/resize-columns/less/column-resizer.less
+++ b/src/features/resize-columns/less/column-resizer.less
@@ -16,6 +16,22 @@
   }
 }
 
+// Add a visual border for final column's resizer element
+.ui-grid-header-cell:last-child .ui-grid-column-resizer.right {
+  border-right: @gridBorderWidth solid @borderColor;
+}
+
+// Put visual border on left of last header cell when direction is rtl
+.ui-grid[dir=rtl]  .ui-grid-header-cell:last-child {
+  .ui-grid-column-resizer.right {
+    border-right: 0;
+  }
+
+  .ui-grid-column-resizer.left {
+    border-left: @gridBorderWidth solid @borderColor;
+  }
+}
+
 .ui-grid {
   &.column-resizing {
     cursor: col-resize;
