--- a/src/less/rtl.less
+++ b/src/less/rtl.less
@@ -24,8 +24,8 @@
   }
 
   .ui-grid-cell:last-child, .ui-grid-header-cell:last-child  {
-    border-left: @gridBorderWidth solid;
-    border-color: @borderColor;
+    border-right: @gridBorderWidth solid @borderColor;
+    border-left: 0;
   }
 
   .ui-grid-header-cell:first-child .ui-grid-vertical-bar,
